# splayerx

./: .eslintrc.js  AGENTS.md  babel.config.js  eslint.config.js  package.json  tsconfig.json  vitest.config.mjs
.electron-vue/: dev-runner.js  webpack.main.config.js  webpack.renderer.config.js  webpack.web.config.js
.github/workflows/: build-mac.yml
docs/: ai-subtitle-translation.md  modernization-review.md
native/apple-translation/: main.swift
native/madlad-worker/: CMakeLists.txt  main.cpp
scripts/: build-apple-translation.sh  build-mac.sh  bundle-llama.sh  bundle-whisper.sh  gen-electron-builder-config.js  get-electron-hash.js  notarize.js  post-install.js
src/main/: electron-compat.d.ts  index.dev.js  index.js
src/main/helpers/: ApplePayVerify.ts  BrowserViewManager.ts  LosslessStreaming.ts  PlaybackServer.ts  WebContentsViewCacheManager.ts  WebContentsViewManager.ts  WindowRouting.ts  electronPrototypes.js  ffmpeg.ts  mediaTasksPlugin.ts  mouse.ts  preferenceWindowControls.js  rendererBridge.js  (+2 more)
src/renderer/: App.vue  about.js  bootstrap.ts  browsing.ts  download.ts  electronCompat.js  ipcSerialization.js  kerning.js  login.ts  losslessStreaming.js  main.ts  openUrl.ts  payment.ts  preference.js  premium.ts  typings.d.ts
src/shared/: Fetcher.ts  sentry-main.js  sentry-options.js  sentry.js  system.js
static/: rendererBridge.js
static/download/: DownloadList.vue  downloadList.ts  preload.js
static/pip/: preload.js  titlebarPreload.js
static/premium/: preload.js
test/unit/: electronCompat.js  index.js  karma.conf.js  setup.js
(+183 files in other folders)
